tests/files/flow_controller_tests/should_run/030.cmdr
x = parseInt(true);
print x;