tests/files/flow_controller_tests/should_fail/085.cmdr
x = true;
print arctan(x);